--- a/ubiquity/chrome/locale/de-DE/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/de-DE/aboutubiquity.properties
@@ -5,10 +5,10 @@
 # Used in all about:ubiquity headers.
 
 ubiquity.nav.main=Tutorial
-ubiquity.nav.settings=Impostazioni
-ubiquity.nav.commands=Comandi disponibili
-ubiquity.nav.getnewcommands=Ottieni nuovi comandi
-ubiquity.nav.support=Guida
+ubiquity.nav.settings=Settings
+ubiquity.nav.commands=Your Commands
+ubiquity.nav.getnewcommands=Get New Commands
+ubiquity.nav.support=Support
 ubiquity.nav.hackubiquity=Hack Ubiquity
 ############################
 
@@ -39,11 +39,11 @@ ubiquity.showhidehelp.hide=Hide Help
 # could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
 
 ubiquity.prefkeys.notifybadmodifier=You must have a modifier like SHIFT, CTRL, ALT or META.
-ubiquity.prefkeys.clickhere=Fare click qui per modificare
-ubiquity.prefkeys.confirmchange=La scorciatoia è stata cambiata in:
+ubiquity.prefkeys.clickhere=Click here to change
+ubiquity.prefkeys.confirmchange=Your key has been changed to %S.
 # Key Combo Input for settings.xhtml (one-liner input focus)
 
-ubiquity.prefkeys.pressyourcombo=Premere la propria combinazione di tasti.
+ubiquity.prefkeys.pressyourcombo=Press your combination...
 ############################
 
 # /chrome/content/cmdlist.js
@@ -70,19 +70,19 @@ ubiquity.cmdlist.purge=purge
 
 # chrome://ubiquity/content/confirm-add-command.xhtml
 
-ubiquity.subscription.successtitle=Iscrizione al feed eseguita con successo.
-ubiquity.subscription.successheader=Iscrizione avvenuta
+ubiquity.subscription.successtitle=Ubiquity Command Feed Subscription Successful
+ubiquity.subscription.successheader=Subscription Successful
 ############################
 
 # /chrome/content/settings.js
 
 # chrome://ubiquity/content/settings.xhtml
 
-ubiquity.settings.restartfirefox=Questa modifica avrà effetto solo dopo aver riavviato Firefox.
-ubiquity.settings.opennewwindows=Questa modifica avrà effetto all'apertura di una nuova finestra.
-ubiquity.settings.skinsaved=Il tema è stato salvato.
-ubiquity.settings.skinerror=Si è verificato un errore durante il salvataggio del tema.
-ubiquity.settings.skinauthor=creato da %s
-ubiquity.settings.skinlicense=con licenza %s
-ubiquity.settings.viewskinsource=visualizza sorgente
-ubiquity.settings.uninstallskin=disinstalla
+ubiquity.settings.restartfirefox=This change will take effect when you restart Firefox.
+ubiquity.settings.opennewwindows=This change will take effect when you open new windows.
+ubiquity.settings.skinsaved=Your skin has been saved!
+ubiquity.settings.skinerror=Error saving your skin.
+ubiquity.settings.skinauthor=created by %S
+ubiquity.settings.skinlicense=licensed as %S
+ubiquity.settings.viewskinsource=view source
+ubiquity.settings.uninstallskin=uninstall
