--- a/ubiquity/chrome/locale/de-DE/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/de-DE/aboutubiquitytutorial.properties
@@ -1,22 +1,22 @@
 ###### Tutorial start page
 
 tutorial.welcome=Welcome to the Ubiquity Tutorial.
-tutorial.fromthestart=Fare clic qui per cominciare da zero
+tutorial.fromthestart=Click Here to Start From The Beginning
 tutorial.fromthemiddle=Start from the middle:
-tutorial.howtostart=Come avviare Ubiquity
-tutorial.previews=Anteprima (comando Weather)
-tutorial.suggestions=I suggerimenti visualizzati (Calcola, Google)
-tutorial.selecting=Eseguire, selezionare (Traduci, Mappa)
-tutorial.morecommands=Come ottenere supporto e scoprire nuovi comandi
+tutorial.howtostart=How to start Ubiquity
+tutorial.previews=Previews (Weather command)
+tutorial.suggestions=The Suggestion List (Calculate, Google)
+tutorial.selecting=Selecting, Executing (Translate, Map)
+tutorial.morecommands=How to get help and learn more commands
 ##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Tutorial di Ubiquity: parte 1 di 6: Come avviare Ubiquity
-tutorial.stage01p1=Benvenuto al tutorial di Ubiquity
+tutorial.stage01h1=Ubiquity Tutorial, part 1 of 6: How to start Ubiquity
+tutorial.stage01p1=Welcome to the Ubiquity tutorial.
 tutorial.stage01p2=Let's get started.  To summon Ubiquity, do this now:
 tutorial.stage01p3=Hold down the %S key and tap the %S key.
 ##### Stage 02
 
-tutorial.stage02p1=This is the Ubiquity <strong>input box</strong>.  You can type commands here.
+tutorial.stage02p1=Dies ist das Ubiquity <strong>Eingabefeld</strong>. Hier können Sie ihre Befehle eingeben.
 tutorial.stage02p2=If you want to get out of Ubiquity without giving a command, <strong>tap the Escape key</strong>.  Try that now.
 ##### Stage 03 (part 2 of 6) #####
 
@@ -51,11 +51,11 @@ tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't
 tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
 ##### Stage 11
 
-tutorial.stage11p1=Il comando <em>Calcola</em> mostrerà il risultato di un'espressione aritmetica
+tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
 tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
 ##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Tutorial di Ubiquity, parte 4 di 6 Il comando Google e l'elenco dei suggerimenti
+tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
 tutorial.stage12p1=Summon Ubiquity again...
 ##### Stage 13
 
