--- a/ubiquity/chrome/locale/ru-RU/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/ru-RU/aboutubiquity.properties
@@ -1,10 +1,8 @@
 ############################
 
-# headers.js
+# /chrome/content/headers.js
 
 # Used in all about:ubiquity headers.
-
-############################
 
 ubiquity.nav.main=Руководство пользователя
 ubiquity.nav.settings=Настройки
@@ -14,66 +12,13 @@ ubiquity.nav.support=Поддержка пользователей
 ubiquity.nav.hackubiquity=Изучи Ubiquity
 ############################
 
-# prefkeys.js
+# /chrome/content/localization-template.js
 
-# chrome://ubiquity/content/settings.xhtml
-
-############################
-
-# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
-
-ubiquity.prefkeys.notifybadmodifier=В комбинации клавиш вы должны использовать одну из следующих кнопок: SHIFT, CTRL, ALT или META.
-ubiquity.prefkeys.notifyalphanumeric=Разрешены только буквенно-цифровые символы и пробел.
-ubiquity.prefkeys.clickhere=Нажмите сюда, чтобы изменить
-# After a change occurs this is the confirmation along with modifier names
-
-ubiquity.prefkeys.confirmchange=Комбинация клавиш изменена на
-# These are not yet attached, see prefkeys.js for details.
-
-# Binding and feedback does not work when applied.
-
-ubiquity.prefkeys.alt=ALT
-ubiquity.prefkeys.ctrl=CTRL
-ubiquity.prefkeys.shift=SHIFT
-ubiquity.prefkeys.meta=META
-# Key Combo Input for settings.xhtml (one-liner input focus)
-
-ubiquity.prefkeys.pressyourcombo=Нажмите комбинацию клавиш...
-############################
-
-# settings.js
-
-# chrome://ubiquity/content/settings.xhtml
-
-############################
-
-ubiquity.settings.restartfirefox=Это изменение будет применено только после перезапуска Firefox.
-ubiquity.settings.opennewwindows=Это изменение будет применено только после открытия нового окна.
-ubiquity.settings.skinsaved=Ваше оформление было сохранено!
-ubiquity.settings.skinerror=Ошибка при сохранении оформления.
-ubiquity.settings.skinauthor=создано %S
-ubiquity.settings.skinlicense=лицензировано на условиях %S
-ubiquity.settings.viewskinsource=Просмотреть исходный код
-ubiquity.settings.uninstallskin=удалить
-############################
-
-# confirm-add-js.js
-
-# chrome://ubiquity/content/confirm-add-command.xhtml
-
-############################
-
-ubiquity.subscription.successtitle=Подписка к каналу команд Ubiquity успешно завершена
-ubiquity.subscription.successheader=Успешная подписка
-############################
-
-# localization-template.js
-
-# chrome://ubiquity/content/localization-template.xhtml
+# /chrome/content/cmdlist.js
 
 #
 
-# cmdlist.js
+# chrome://ubiquity/content/localization-template.xhtml
 
 # chrome://ubiquity/content/cmdlist.xhtml
 
@@ -81,17 +26,29 @@ ubiquity.subscription.successheader=Успешная подписка
 
 # the "show/hide help" messages.
 
-############################
-
 ubiquity.showhidehelp.show=Показать справку
 ubiquity.showhidehelp.hide=Спрятать справку
+# end global properties, begin by file name.
+
 ############################
 
-# cmdlist.js
+# /chrome/content/prefkeys.js
+
+# chrome://ubiquity/content/settings.xhtml
+
+# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
+
+ubiquity.prefkeys.notifybadmodifier=В комбинации клавиш вы должны использовать одну из следующих кнопок: SHIFT, CTRL, ALT или META.
+ubiquity.prefkeys.clickhere=Нажмите сюда, чтобы изменить
+ubiquity.prefkeys.confirmchange=Комбинация клавиш изменена на
+# Key Combo Input for settings.xhtml (one-liner input focus)
+
+ubiquity.prefkeys.pressyourcombo=Нажмите комбинацию клавиш...
+############################
+
+# /chrome/content/cmdlist.js
 
 # chrome://ubiquity/content/cmdlist.xhtml
-
-############################
 
 ubiquity.cmdlist.unsubscribefeed=отписаться
 ubiquity.cmdlist.feedupdated=Доступно обновление для этой ленты.
@@ -109,9 +66,23 @@ ubiquity.cmdlist.resubscribe=подписаться заново
 ubiquity.cmdlist.purge=очистить
 ############################
 
-# thenext.js
+# /chrome/content/confirm-add-js.js
 
-# chrome://ubiquity/content/relevant.xhtml
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
+ubiquity.subscription.successtitle=Подписка к каналу команд Ubiquity успешно завершена
+ubiquity.subscription.successheader=Успешная подписка
 ############################
 
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
+
+ubiquity.settings.restartfirefox=Это изменение будет применено только после перезапуска Firefox.
+ubiquity.settings.opennewwindows=Это изменение будет применено только после открытия нового окна.
+ubiquity.settings.skinsaved=Ваше оформление было сохранено!
+ubiquity.settings.skinerror=Ошибка при сохранении оформления.
+ubiquity.settings.skinauthor=создано %S
+ubiquity.settings.skinlicense=лицензировано на условиях %S
+ubiquity.settings.viewskinsource=Просмотреть исходный код
+ubiquity.settings.uninstallskin=удалить
