--- a/ubiquity/chrome/locale/pt-PT/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/pt-PT/aboutubiquity.properties
@@ -1,10 +1,8 @@
 ############################
 
-# headers.js
+# /chrome/content/headers.js
 
 # Used in all about:ubiquity headers.
-
-############################
 
 ubiquity.nav.main=Tutorial
 ubiquity.nav.settings=Definições
@@ -14,66 +12,13 @@ ubiquity.nav.support=Suporte
 ubiquity.nav.hackubiquity=Criar comandos
 ############################
 
-# prefkeys.js
+# /chrome/content/localization-template.js
 
-# chrome://ubiquity/content/settings.xhtml
-
-############################
-
-# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
-
-ubiquity.prefkeys.notifybadmodifier=Deve ter uma tecla modificadora com Shift, Ctrl, Alt ou Meta.
-ubiquity.prefkeys.notifyalphanumeric=Apenas teclas alfanuméricas ou espaço são permitidos.
-ubiquity.prefkeys.clickhere=Clique aqui para alterar
-# After a change occurs this is the confirmation along with modifier names
-
-ubiquity.prefkeys.confirmchange=A sua tecla foi alterada para
-# These are not yet attached, see prefkeys.js for details.
-
-# Binding and feedback does not work when applied.
-
-ubiquity.prefkeys.alt=Alt
-ubiquity.prefkeys.ctrl=Ctrl
-ubiquity.prefkeys.shift=Shift
-ubiquity.prefkeys.meta=Meta
-# Key Combo Input for settings.xhtml (one-liner input focus)
-
-ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
-############################
-
-# settings.js
-
-# chrome://ubiquity/content/settings.xhtml
-
-############################
-
-ubiquity.settings.restartfirefox=Esta alteração terá efeito após reiniciar o Firefox.
-ubiquity.settings.opennewwindows=Esta alteração terá efeito quando abrir novas janelas.
-ubiquity.settings.skinsaved=O seu tema foi guardado!
-ubiquity.settings.skinerror=Erro ao guardar o seu tema.
-ubiquity.settings.skinauthor=criado por %S
-ubiquity.settings.skinlicense=licenciado como %S
-ubiquity.settings.viewskinsource=ver código-fonte
-ubiquity.settings.uninstallskin=desinstalar
-############################
-
-# confirm-add-js.js
-
-# chrome://ubiquity/content/confirm-add-command.xhtml
-
-############################
-
-ubiquity.subscription.successtitle=Subscrição do Feed de comandos do Ubiquity concluída com sucesso
-ubiquity.subscription.successheader=Subscrição concluída com sucesso
-############################
-
-# localization-template.js
-
-# chrome://ubiquity/content/localization-template.xhtml
+# /chrome/content/cmdlist.js
 
 #
 
-# cmdlist.js
+# chrome://ubiquity/content/localization-template.xhtml
 
 # chrome://ubiquity/content/cmdlist.xhtml
 
@@ -81,17 +26,29 @@ ubiquity.subscription.successheader=Subscrição concluída com sucesso
 
 # the "show/hide help" messages.
 
-############################
-
 ubiquity.showhidehelp.show=Mostrar Ajuda
 ubiquity.showhidehelp.hide=Ocultar Ajuda
+# end global properties, begin by file name.
+
 ############################
 
-# cmdlist.js
+# /chrome/content/prefkeys.js
+
+# chrome://ubiquity/content/settings.xhtml
+
+# could read "Your modifier must include either the SHIFT, CTRL, ALT or META keys."
+
+ubiquity.prefkeys.notifybadmodifier=Deve ter uma tecla modificadora com Shift, Ctrl, Alt ou Meta.
+ubiquity.prefkeys.clickhere=Clique aqui para alterar
+ubiquity.prefkeys.confirmchange=A sua tecla foi alterada para
+# Key Combo Input for settings.xhtml (one-liner input focus)
+
+ubiquity.prefkeys.pressyourcombo=Pressione sua combinação…
+############################
+
+# /chrome/content/cmdlist.js
 
 # chrome://ubiquity/content/cmdlist.xhtml
-
-############################
 
 ubiquity.cmdlist.unsubscribefeed=remover
 ubiquity.cmdlist.feedupdated=Está disponível uma actualização para este feed.
@@ -109,9 +66,23 @@ ubiquity.cmdlist.resubscribe=re-subscrever
 ubiquity.cmdlist.purge=banir
 ############################
 
-# thenext.js
+# /chrome/content/confirm-add-js.js
 
-# chrome://ubiquity/content/relevant.xhtml
+# chrome://ubiquity/content/confirm-add-command.xhtml
 
+ubiquity.subscription.successtitle=Subscrição do Feed de comandos do Ubiquity concluída com sucesso
+ubiquity.subscription.successheader=Subscrição concluída com sucesso
 ############################
 
+# /chrome/content/settings.js
+
+# chrome://ubiquity/content/settings.xhtml
+
+ubiquity.settings.restartfirefox=Esta alteração terá efeito após reiniciar o Firefox.
+ubiquity.settings.opennewwindows=Esta alteração terá efeito quando abrir novas janelas.
+ubiquity.settings.skinsaved=O seu tema foi guardado!
+ubiquity.settings.skinerror=Erro ao guardar o seu tema.
+ubiquity.settings.skinauthor=criado por %S
+ubiquity.settings.skinlicense=licenciado como %S
+ubiquity.settings.viewskinsource=ver código-fonte
+ubiquity.settings.uninstallskin=desinstalar
